modtools/utils.py


class PedalboardInfo(Structure):
    _fields_ = [
        ("title", c_char_p),
        ("width", c_int),
        ("height", c_int),
        ("factory", c_bool),
        ("midi_separated_mode", c_bool),
        ("midi_loopback", c_bool),
        ("plugins", POINTER(PedalboardPlugin)),
        ("connections", POINTER(PedalboardConnection)),
        ("hardware", PedalboardHardware),
        ("timeInfo", PedalboardTimeInfo),
        ("version", c_uint),
    ]

class PedalboardInfo_Mini(Structure):
    _fields_ = [
        ("valid", c_bool),
        ("broken", c_bool),
        ("factory", c_bool),
        ("uri", c_char_p),
        ("bundle", c_char_p),
        ("title", c_char_p),
        ("version", c_uint),
    ]

class StatePortValue(Structure):
    _fields_ = [
        ("valid", c_bool),
        ("symbol", c_char_p),
        ("value", c_float),
    ]

class PedalboardPluginValues(Structure):
    _fields_ = [
        ("valid", c_bool),
        ("bypassed", c_bool),
        ("instance", c_char_p),
        ("preset", c_char_p),
        ("ports", POINTER(StatePortValue)),
    ]

class JackData(Structure):
    _fields_ = [
        ("cpuLoad", c_float),
        ("xruns", c_uint),
        ("rolling", c_bool),
        ("bpb", c_double),
        ("bpm", c_double),
    ]

JackBufSizeChanged = CFUNCTYPE(None, c_uint)
JackPortAppeared = CFUNCTYPE(None, c_char_p, c_bool)
JackPortDeleted = CFUNCTYPE(None, c_char_p)
TrueBypassStateChanged = CFUNCTYPE(None, c_bool, c_bool)
CvExpInputModeChanged = CFUNCTYPE(None, c_bool)

c_struct_types = (PluginAuthor,
                  PluginGUI,
                  PluginGUI_Mini,
                  PluginPortRanges,
                  PluginPortUnits,
                  PluginPortsI,
                  PluginPorts,
                  PluginLongParameterRanges,
                  PedalboardMidiControl,
                  PedalboardHardware,
                  PedalboardTimeInfo)

c_structp_types = (POINTER(PluginGUIPort),
                   POINTER(PluginPortScalePoint),
                   POINTER(PluginPort),
                   POINTER(PluginParameter),
                   POINTER(PluginPreset),
                   POINTER(PedalboardPlugin),
                   POINTER(PedalboardConnection),
                   POINTER(PedalboardPluginPort),
                   POINTER(PedalboardHardwareMidiPort),
                   POINTER(StatePortValue))

c_structpp_types = (POINTER(POINTER(PluginInfo_Mini)),
                    POINTER(POINTER(PedalboardInfo_Mini)))

c_union_types    = (PluginParameterRanges,)

utils.init.argtypes = None
utils.init.restype  = None

utils.cleanup.argtypes = None
utils.cleanup.restype  = None

utils.is_bundle_loaded.argtypes = [c_char_p]
utils.is_bundle_loaded.restype  = c_bool

utils.add_bundle_to_lilv_world.argtypes = [c_char_p]
utils.add_bundle_to_lilv_world.restype  = POINTER(c_char_p)

utils.remove_bundle_from_lilv_world.argtypes = [c_char_p, c_char_p]
utils.remove_bundle_from_lilv_world.restype  = POINTER(c_char_p)

utils.get_plugin_list.argtypes = None
utils.get_plugin_list.restype  = POINTER(c_char_p)

utils.get_all_plugins.argtypes = None
utils.get_all_plugins.restype  = POINTER(POINTER(PluginInfo_Mini))

utils.get_plugin_info.argtypes = [c_char_p]
utils.get_plugin_info.restype  = POINTER(PluginInfo)

utils.get_non_cached_plugin_info.argtypes = [c_char_p]
utils.get_non_cached_plugin_info.restype  = POINTER(NonCachedPluginInfo)

utils.get_plugin_gui.argtypes = [c_char_p]
utils.get_plugin_gui.restype  = POINTER(PluginGUI)

utils.get_plugin_gui_mini.argtypes = [c_char_p]
utils.get_plugin_gui_mini.restype  = POINTER(PluginGUI_Mini)

utils.get_plugin_control_inputs.argtypes = [c_char_p]
utils.get_plugin_control_inputs.restype  = POINTER(PluginPort)

utils.get_plugin_info_essentials.argtypes = [c_char_p]
utils.get_plugin_info_essentials.restype  = POINTER(PluginInfo_Essentials)

utils.is_plugin_preset_valid.argtypes = [c_char_p, c_char_p]
utils.is_plugin_preset_valid.restype  = c_bool

utils.rescan_plugin_presets.argtypes = [c_char_p]
utils.rescan_plugin_presets.restype  = None

utils.get_all_pedalboards.argtypes = None
utils.get_all_pedalboards.restype  = POINTER(POINTER(PedalboardInfo_Mini))

utils.get_broken_pedalboards.argtypes = None
utils.get_broken_pedalboards.restype  = POINTER(c_char_p)

utils.get_pedalboard_info.argtypes = [c_char_p]
utils.get_pedalboard_info.restype  = POINTER(PedalboardInfo)

utils.get_pedalboard_size.argtypes = [c_char_p]
utils.get_pedalboard_size.restype  = POINTER(c_int)

utils.get_pedalboard_plugin_values.argtypes = [c_char_p]
utils.get_pedalboard_plugin_values.restype  = POINTER(PedalboardPluginValues)

utils.get_state_port_values.argtypes = [c_char_p]
utils.get_state_port_values.restype  = POINTER(StatePortValue)

utils.list_plugins_in_bundle.argtypes = [c_char_p]
utils.list_plugins_in_bundle.restype  = POINTER(c_char_p)

utils.file_uri_parse.argtypes = [c_char_p]
utils.file_uri_parse.restype  = c_char_p

utils.set_cpu_affinity.argtypes = [c_int]
utils.set_cpu_affinity.restype  = None

utils.init_jack.argtypes = None
utils.init_jack.restype  = c_bool

utils.close_jack.argtypes = None
utils.close_jack.restype  = None

utils.get_jack_data.argtypes = [c_bool]
utils.get_jack_data.restype  = POINTER(JackData)

utils.get_jack_buffer_size.argtypes = None
utils.get_jack_buffer_size.restype  = c_uint

utils.set_jack_buffer_size.argtypes = [c_uint]
utils.set_jack_buffer_size.restype  = c_uint

utils.get_jack_sample_rate.argtypes = None
utils.get_jack_sample_rate.restype  = c_float

utils.get_jack_port_alias.argtypes = [c_char_p]
utils.get_jack_port_alias.restype  = c_char_p

utils.has_midi_beat_clock_sender_port.argtypes = None
utils.has_midi_beat_clock_sender_port.restype  = c_bool

utils.has_serial_midi_input_port.argtypes = None
utils.has_serial_midi_input_port.restype  = c_bool

utils.has_serial_midi_output_port.argtypes = None
utils.has_serial_midi_output_port.restype  = c_bool

utils.has_midi_merger_output_port.argtypes = None
utils.has_midi_merger_output_port.restype  = c_bool

utils.has_midi_broadcaster_input_port.argtypes = None
utils.has_midi_broadcaster_input_port.restype  = c_bool

utils.has_duox_split_spdif.argtypes = None
utils.has_duox_split_spdif.restype  = c_bool

utils.get_jack_hardware_ports.argtypes = [c_bool, c_bool]
utils.get_jack_hardware_ports.restype  = POINTER(c_char_p)

utils.connect_jack_ports.argtypes = [c_char_p, c_char_p]
utils.connect_jack_ports.restype  = c_bool

utils.connect_jack_midi_output_ports.argtypes = [c_char_p]
utils.connect_jack_midi_output_ports.restype  = c_bool

utils.disconnect_jack_ports.argtypes = [c_char_p, c_char_p]
utils.disconnect_jack_ports.restype  = c_bool

utils.disconnect_all_jack_ports.argtypes = [c_char_p]
utils.disconnect_all_jack_ports.restype  = c_bool

utils.reset_xruns.argtypes = None
utils.reset_xruns.restype  = None

utils.init_bypass.argtypes = None
utils.init_bypass.restype  = None

utils.get_truebypass_value.argtypes = [c_bool]
utils.get_truebypass_value.restype  = c_bool

utils.set_truebypass_value.argtypes = [c_bool, c_bool]
utils.set_truebypass_value.restype  = c_bool

utils.get_master_volume.argtypes = [c_bool]
utils.get_master_volume.restype  = c_float

utils.set_util_callbacks.argtypes = [JackBufSizeChanged, JackPortAppeared, JackPortDeleted, TrueBypassStateChanged]
utils.set_util_callbacks.restype  = None

utils.set_extra_util_callbacks.argtypes = [CvExpInputModeChanged]
utils.set_extra_util_callbacks.restype  = None

# ------------------------------------------------------------------------------------------------------------

# initialize
def init():
    utils.init()

# cleanup, cannot be used afterwards
def cleanup():
    utils.cleanup()

# ------------------------------------------------------------------------------------------------------------

# check if a bundle is loaded in our lilv world
def is_bundle_loaded(bundlepath):
    return bool(utils.is_bundle_loaded(bundlepath.encode("utf-8")))

# add a bundle to our lilv world
# returns uri list of added plugins
def add_bundle_to_lilv_world(bundlepath):
    return charPtrPtrToStringList(utils.add_bundle_to_lilv_world(bundlepath.encode("utf-8")))

# remove a bundle to our lilv world
# returns uri list of removed plugins
def remove_bundle_from_lilv_world(bundlepath, resource):
    return charPtrPtrToStringList(utils.remove_bundle_from_lilv_world(bundlepath.encode("utf-8"),
                                                                      resource.encode("utf-8") if resource else None))

# ------------------------------------------------------------------------------------------------------------

# get all available plugins
# this triggers short scanning of all plugins
def get_plugin_list():
    return charPtrPtrToStringList(utils.get_plugin_list())

# get all available plugins
# this triggers short scanning of all plugins
def get_all_plugins():
    return structPtrPtrToList(utils.get_all_plugins())

# get a specific plugin
# NOTE: may throw
def get_plugin_info(uri):
    info = utils.get_plugin_info(uri.encode("utf-8"))
    if not info:
        raise Exception
    return structToDict(info.contents)

# get a specific plugin (non-cached specific info)
# NOTE: may throw
def get_non_cached_plugin_info(uri):
    info = utils.get_non_cached_plugin_info(uri.encode("utf-8"))
    if not info:
        raise Exception
    return structToDict(info.contents)

# get a specific plugin's modgui
# NOTE: may throw
def get_plugin_gui(uri):
    info = utils.get_plugin_gui(uri.encode("utf-8"))
    if not info:
        raise Exception
    return structToDict(info.contents)

# get a specific plugin's modgui (mini)
# NOTE: may throw
def get_plugin_gui_mini(uri):
    info = utils.get_plugin_gui_mini(uri.encode("utf-8"))
    if not info:
        raise Exception
    return structToDict(info.contents)

def get_plugin_control_inputs(uri):
    return structPtrToList(utils.get_plugin_control_inputs(uri.encode("utf-8")))

# get essential plugin info for host control (control inputs, monitored outputs, parameters and build environment)
def get_plugin_info_essentials(uri):
    info = utils.get_plugin_info_essentials(uri.encode("utf-8"))
    if not info:
        return {
            'error': True,
            'controlInputs': [],
            'monitoredOutputs': [],
            'parameters': [],
            'buildEnvironment': '',
            'microVersion': 0,
            'minorVersion': 0,
            'release': 0,
            'builder': 0,
        }
    return structToDict(info.contents)

# check if a plugin preset uri is valid (must exist)
def is_plugin_preset_valid(plugin, preset):
    return bool(utils.is_plugin_preset_valid(plugin.encode("utf-8"), preset.encode("utf-8")))

# trigger a preset rescan for a plugin the next time it's loaded
def rescan_plugin_presets(uri):
    utils.rescan_plugin_presets(uri.encode("utf-8"))

# ------------------------------------------------------------------------------------------------------------

_allpedalboards = None

# get all available pedalboards (ie, plugins with pedalboard type)
def get_all_pedalboards():
    global _allpedalboards
    if _allpedalboards is None:
        pbs = structPtrPtrToList(utils.get_all_pedalboards())
        utitles = []
        for pb in pbs:
            if not pb['valid']:
                continue
            if pb['factory']:
                continue
            ntitle = get_unique_name(pb['title'], utitles)
            if ntitle is not None:
                pb['title'] = ntitle
            utitles.append(pb['title'])
        _allpedalboards = pbs
    return _allpedalboards

# handy function to reset our last call value
def reset_get_all_pedalboards_cache():
    global _allpedalboards
    _allpedalboards = None
